--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
-    "expo": "^51.0.0",
+    "expo": "^51.0.38",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.10",
     "expo-linking": "~6.3.1",
     "expo-router": "^3.5.23",
     "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-dotenv": "^3.4.9",
+    "react-native": "^0.74.5",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
@@ -30,7 +30,10 @@
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "babel-plugin-module-resolver": "^5.0.2"
+    "@react-native-community/cli-server-api": "^15.1.0",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "webpack": "^5.96.1",
+    "webpack-cli": "^5.1.4"
   },
   "resolutions": {
     "metro": "^0.73.7",
